--- a/index.html
+++ b/index.html
@@ -16,36 +16,11 @@
 
 
     <link href="public/components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <link href="public/components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
     <link href="public/components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="public/components/angular-ui-select/dist/select.min.css" rel="stylesheet">
 
     <link href="public/css/style.css" rel="stylesheet">
-
-
-    <script src="public/components/angularjs/angular.js"></script>
-    <script src="public/components/angular-route/angular-route.js"></script>
-    <script src="public/components/angular-resource/angular-resource.js"></script>
-    <script src="public/components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="public/components/jquery/dist/jquery.min.js"></script>
-    <script src="public/components/angular-bootstrap-switch/dist/angular-bootstrap-switch.js"></script>
-    <script src="public/components/tv4/tv4.js"></script>
-    <script src="public/components/objectpath/lib/ObjectPath.js"></script>
-    <script src="public/components/angular-schema-form/dist/schema-form.min.js"></script>
-    <script src="public/components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
-    <script src="public/components/angular-ui-select/dist/select.min.js"></script>
-    <script src='public/components/ngstorage/ngStorage.min.js'></script>
-
-
-    <script src="app/script/app.js"></script>
-    <script src="app/script/controllers/RulesCtrl.js"></script>
-    <script src="app/script/controllers/MainCtrl.js"></script>
-    <script src="app/script/controllers/AuthenticationCtrl.js"></script>
-    <script src="app/script/services/service.js"></script>
-    <script src="app/script/services/restService.js"></script>
-    <script src="app/script/services/sharedProperties.js"></script>
-    <script src="app/script/filters/filter.js"></script>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -58,11 +33,12 @@
 <body>
 
 <!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top" data-ng-controller="AuthCtrl" >
+<nav class="navbar navbar-default navbar-fixed-top" data-ng-controller="AuthCtrl">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -77,9 +53,24 @@
                 <li ng-hide="isAuthenticate"><a ng-href="#/signin">Sign in</a></li>
                 <li ng-hide="isAuthenticate"><a ng-href="#/register">Register</a></li>
                 <li ng-show="isAuthenticate"><a ng-href="#/user">User</a></li>
-                <li ng-show="isAuthenticate"><a ng-href="#" ng-click="logout()">Logout</a></li>
+                <li ng-show="isAuthenticate"><a ng-href="#/actionTarget">Action Target</a></li>
+                <li ng-show="isAuthenticate"><a ng-href="#/eventSource">Event Source</a></li>
+                <li ng-show="isAuthenticate"><a ng-href="#" ng-click="logout()">Sign out</a></li>
             </ul>
+            <div ng-show="isAuthenticate">
+                <div class="nav navbar-nav navbar-right header-select" ng-controller="LoginInfoCtrl">
+
+                    <ui-select ng-model="currentOrganization" theme="bootstrap">
+                        <ui-select-match placeholder="Select an organization">{{$select.selected.orgName}}</ui-select-match>
+                        <ui-select-choices repeat="organization in organizations  | filter: { orgName: $select.search }" value="{{$select.selected.orgName}}">
+                            <div ng-bind-html="organization.orgName | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
         </div>
+
+
         <!--/.nav-collapse -->
     </div>
 </nav>
@@ -92,6 +83,30 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
+<script src="public/components/angularjs/angular.js"></script>
+<script src="public/components/angular-route/angular-route.js"></script>
+<script src="public/components/angular-resource/angular-resource.js"></script>
+<script src="public/components/angular-sanitize/angular-sanitize.js"></script>
+<script src="public/components/jquery/dist/jquery.min.js"></script>
+<script src="public/components/angular-bootstrap-switch/dist/angular-bootstrap-switch.js"></script>
+<script src="public/components/tv4/tv4.js"></script>
+<script src="public/components/objectpath/lib/ObjectPath.js"></script>
+<script src="public/components/angular-schema-form/dist/schema-form.min.js"></script>
+<script src="public/components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
+<script src="public/components/angular-ui-select/dist/select.min.js"></script>
+<script src='public/components/ngstorage/ngStorage.min.js'></script>
+
+<script src="app/script/app.js"></script>
+<script src="app/script/controllers/RulesCtrl.js"></script>
+<script src="app/script/controllers/MainCtrl.js"></script>
+<script src="app/script/controllers/SettingsCtrl.js"></script>
+<script src="app/script/controllers/AuthenticationCtrl.js"></script>
+<script src="app/script/controllers/ActionTargetCtrl.js"></script>
+<script src="app/script/controllers/EventSourceCtrl.js"></script>
+<script src="app/script/services/service.js"></script>
+<script src="app/script/services/restService.js"></script>
+<script src="app/script/services/sharedProperties.js"></script>
+<script src="app/script/filters/filter.js"></script>
 
 
 </body>
