Organization management #6 is able to  * add a new organization  * visualize all organization of the user  * assign user to an organization.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li ng-show="isAuthenticate"><a ng-href="#/rules">Rules</a></li>
                 <li ng-hide="isAuthenticate"><a ng-href="#/signin">Sign in</a></li>
                 <li ng-hide="isAuthenticate"><a ng-href="#/register">Register</a></li>
-                <li ng-show="isAuthenticate"><a ng-href="#/settings">User</a></li>
+                <li ng-show="isAuthenticate"><a ng-href="#/settings">Settings</a></li>
                 <li ng-show="isAuthenticate"><a ng-href="#/actionTarget">Action Target</a></li>
                 <li ng-show="isAuthenticate"><a ng-href="#/eventSource">Event Source</a></li>
                 <li ng-show="isAuthenticate"><a ng-href="#" ng-click="logout()">Sign out</a></li>
