Add the live preview for the configuration form for the action target Template creation #1 Use ace editor (angularjs version) to edit json

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 <script src="public/components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
 <script src="public/components/angular-ui-select/dist/select.js"></script>
 <script src='public/components/ngstorage/ngStorage.min.js'></script>
+<script src="public/components/ace-builds/src-min-noconflict/ace.js"></script>
+<script src="public/components/angular-ui-ace/ui-ace.js"></script>
+<script src="public/components/ace-builds/src-min-noconflict/ext-language_tools.js"></script>
 
 <script src="app/script/app.js"></script>
 <script src="app/script/controllers/RulesCtrl.js"></script>
